# RobotX2022

./: .gitmodules  Amore_GUI.workspace.user.1c18f82  README.md  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  compile_commands.json  next_task
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/amore/: NED_waypoints.h  my_msg.h  state_msg.h  usv_pose_msg.h
devel/include/gps_common/: GPSFix.h  GPSStatus.h
devel/include/jetson/: NED_waypoints.h  state_msg.h  task_info.h  usv_pose_msg.h
devel/include/pozyx_drivers/: AnchorInfo.h
devel/include/rtcm_msgs/: Message.h
devel/include/ublox_msgs/: Ack.h  AidALM.h  AidEPH.h  AidHUI.h  CfgANT.h  CfgCFG.h  CfgDAT.h  CfgDGNSS.h  CfgGNSS.h  CfgGNSS_Block.h  CfgHNR.h  CfgINF.h  CfgINF_Block.h  CfgMSG.h  CfgNAV5.h  CfgNAVX5.h  CfgNMEA.h  CfgNMEA6.h  CfgNMEA7.h  CfgPRT.h  CfgRATE.h  CfgRST.h  CfgSBAS.h  CfgTMODE3.h  CfgUSB.h  EsfINS.h  EsfMEAS.h  EsfRAW.h  EsfRAW_Block.h  EsfSTATUS.h  EsfSTATUS_Sens.h  HnrPVT.h  Inf.h  MgaGAL.h  MonGNSS.h  MonHW.h  MonHW6.h  MonVER.h  MonVER_Extension.h  NavATT.h  (+39 more)
devel/include/usv_msgs/: RangeBearing.h
devel/include/vrx_gazebo/: BallShooterRequest.h  BallShooterResponse.h  ColorSequenceRequest.h  ColorSequenceResponse.h  Contact.h  Task.h
devel/include/zed_interfaces/: BoundingBox2Df.h  BoundingBox2Di.h  BoundingBox3D.h  Keypoint2Df.h  Keypoint2Di.h  Keypoint3D.h  Object.h  ObjectsStamped.h  PlaneStamped.h  RGBDSensors.h  Skeleton2D.h  Skeleton3D.h  reset_odometryRequest.h  reset_odometryResponse.h  reset_trackingRequest.h  reset_trackingResponse.h  save_3d_mapRequest.h  save_3d_mapResponse.h  save_area_memoryRequest.h  save_area_memoryResponse.h  set_led_statusRequest.h  set_led_statusResponse.h  set_poseRequest.h  set_poseResponse.h  start_3d_mappingRequest.h  start_3d_mappingResponse.h  start_object_detectionRequest.h  start_object_detectionResponse.h  start_remote_streamRequest.h  start_remote_streamResponse.h  start_svo_recordingRequest.h  start_svo_recordingResponse.h  stop_3d_mappingRequest.h  stop_3d_mappingResponse.h  stop_object_detectionRequest.h  stop_object_detectionResponse.h  stop_remote_streamRequest.h  stop_remote_streamResponse.h  stop_svo_recordingRequest.h  stop_svo_recordingResponse.h  (+2 more)
devel/include/zed_nodelets/: ZedConfig.h
devel/lib/amore/: Control_Allocation  High_Level_trajectory_processor  PD_S_K  PID_HP_control  PID_HP_controller  PID_HS_controller  PID_pub  PID_sub  SK_Controller  Station_keeping  Task1_SK_Controller  Task1_SK_Planner  Task1_SK_gps_imu  Task1_SK_point_converter  Task2_WF_Planner  Task2_WF_gps_imu  Task2_WF_waypoints_converter  Visions_Path_Planner  animal_encounter  camera_lidar  camera_subscriber  color_test  gps_imu  gps_subscriber  lidar_subscriber  midpoint_planner  mission_control  move_publisher  navigation_array  new_SK  new_gps_imu  object_d  perception_array  pid_pub  pid_sub  propulsion_system  scan_code  sensor_subscriber  stereo_vis  traj_pub
devel/lib/geonav_transform/: geonav_transform_node
devel/lib/gps_common/: utm_odometry_node  utm_odometry_to_navsatfix_node
devel/lib/gpsd_client/: gpsd_client
devel/lib/jetson/: camera_capture  gps_ublox  mission_control  mission_control_indoor  mission_control_j  mission_control_outdoor  navigation_array_indoor  navigation_array_j  navigation_array_outdoor  path_planner  path_planner_indoor  path_planner_outdoor  propulsion_system  propulsion_system_indoor  propulsion_system_j  propulsion_system_outdoor
devel/lib/pkgconfig/: amore.pc  core_sparton.pc  geonav_transform.pc  gps_common.pc  gpsd_client.pc  jetson.pc  pozyx_drivers.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  rtcm_msgs.pc  sparton_ahrs8_driver.pc  sparton_ahrsm2_driver.pc  ublox_gps.pc  ublox_msg_filters.pc  ublox_msgs.pc  ublox_serialization.pc  usv_gazebo_plugins.pc  usv_msgs.pc  vrx_2019.pc  vrx_gazebo.pc  wamv_description.pc  wamv_gazebo.pc  wave_gazebo.pc  wave_gazebo_plugins.pc  xsens_mti_driver.pc  zed_interfaces.pc  zed_nodelets.pc  zed_wrapper.pc
devel/lib/rosserial_arduino/: make_libraries.py  serial_node.py
devel/lib/rosserial_client/: make_libraries  make_library.py
devel/lib/rosserial_embeddedlinux/: make_libraries.py
devel/lib/rosserial_mbed/: make_libraries.py
devel/lib/rosserial_python/: serial_node.py
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/rosserial_windows/: make_libraries.py
devel/lib/ublox_gps/: ublox_logger
devel/lib/ublox_msg_filters/: example
devel/lib/vrx_gazebo/: generate_wamv.py  generate_worlds.py  key2thrust_angle.py  pinger_visualization.py  set_pinger_position.py  twist2thrust.py
src/: .gitmodules
src/amore/: CMakeLists.txt  package.xml
src/amore/launch/: PID_launch.launch  SK.launch  Task1_SK.launch  Task2_WF.launch  Task3.launch  VRX_AMORE.launch  Visions_SSP_BH.launch  traj_track.launch
src/amore/msg/: Color.msg  NED_waypoints.msg
src/amore/src/: High_Level_trajectory_processor.cpp  PID_HP_control.cpp  PID_HP_controller.cpp  PID_sub.cpp  SK_Controller.cpp  Station_keeping.cpp  Task1_SK_Controller.cpp  Task1_SK_Planner.cpp  Task1_SK_gps_imu.cpp  Task1_SK_point_converter.cpp  Task2_WF_Planner.cpp  Task2_WF_gps_imu.cpp  Task2_WF_waypoints_converter.cpp  Visions_Path_Planner.cpp  animal_encounter.cpp  beacon_subscriber.cpp  camera_lidar.cpp  camera_subscriber.cpp  color_test.cpp  gps_imu.cpp  gps_subscriber.cpp  lidar_subscriber.cpp  mission_control.cpp  move_publisher.cpp  navigation_array.cpp  new_gps_imu.cpp  object_d.cpp  old_SK.cpp  perception_array.cpp  propulsion_system.cpp  scan_code.cpp  sensor_subscriber.cpp  stereo_vis.cpp  traj_pub.cpp
src/jetson/: CMakeLists.txt  a.out  client.cpp  package.xml  server  server.cpp
src/template_gui_package/: CMakeLists.txt
(+316 files in other folders)
